--- a/apps/api-journeys/.eslintrc.json
+++ b/apps/api-journeys/.eslintrc.json
@@ -1,5 +1,6 @@
 {
   "extends": ["../../.eslintrc.json", "plugin:@nx/react-typescript"],
+  "plugins": ["react", "i18next"],
   "ignorePatterns": ["!**/*"],
   "overrides": [
     {
