--- a/apps/api-journeys/.eslintrc.json
+++ b/apps/api-journeys/.eslintrc.json
@@ -18,5 +18,8 @@
       "files": ["*.js", "*.jsx"],
       "rules": {}
     }
-  ]
+  ],
+  "rules": {
+    "i18next/no-literal-string": "off"
+  }
 }
