--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@ terraform.tfstate.backup
 **/test-results/
 **/playwright-report/
 **/playwright/.cache/
+**/apps/journeys-admin-e2e/user.json
 
 # ignore old locale files
 /libs/locales/**/*_old.json
