--- a/apps/api-users/project.json
+++ b/apps/api-users/project.json
@@ -143,6 +143,16 @@
       "options": {
         "command": "codecov -f coverage/apps/api-users/cobertura-coverage.xml -F apps.api-users"
       }
+    },
+    "email": {
+      "executor": "nx:run-commands",
+      "options": {
+        "parallel": false,
+        "commands": [
+          "if lsof -Pi :4601 -sTCP:LISTEN -t>/dev/null; then\nkill -9 $(lsof -Pi :4601 -sTCP:LISTEN -t)\nfi",
+          "email dev --dir apps/api-users/src/app/emails/templates --port 4601"
+        ]
+      }
     }
   },
   "tags": []
