--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@mui/x-data-grid": "^6.12.1",
     "@nestjs/apollo": "^12.0.7",
     "@nestjs/bull": "^10.0.1",
+    "@nestjs/bullmq": "^10.1.0",
     "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/common": "10.1.3",
     "@nestjs/core": "10.1.3",
@@ -63,8 +64,8 @@
     "@prisma/client": "^5.2.0",
     "@react-oauth/google": "^0.12.1",
     "@storybook/core-server": "7.6.6",
-    "@types/gapi": "^0.0.47",
     "@types/aws-sdk": "^2.7.0",
+    "@types/gapi": "^0.0.47",
     "adal-node": "^0.2.3",
     "aws-sdk": "^2.1546.0",
     "axios": "^1.6.5",
