--- a/apps/api-users/project.json
+++ b/apps/api-users/project.json
@@ -153,6 +153,18 @@
           "email dev --dir apps/api-users/src/app/emails/templates --port 4601"
         ]
       }
+    },
+    "demo": {
+      "executor": "@nx/storybook:storybook",
+      "options": {
+        "port": 4400,
+        "configDir": ".storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
     }
   },
   "tags": []
