--- a/apps/api-users/project.json
+++ b/apps/api-users/project.json
@@ -116,6 +116,12 @@
         ]
       }
     },
+    "prisma-seed": {
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": ["npm run ts-node apps/api-users/db/seed.ts"]
+      }
+    },
     "prisma-studio": {
       "executor": "nx:run-commands",
       "options": {
