--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@apollo/server": "^4.9.3",
     "@apollo/server-plugin-response-cache": "^4.1.3",
     "@apollo/subgraph": "^2.5.4",
+    "@aws-sdk/client-ses": "^3.511.0",
     "@casl/ability": "^6.5.0",
     "@casl/prisma": "^1.4.1",
     "@docusaurus/core": "^3.0.1",
