--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ apps/api-gateway/router
 .DS_Store
 Thumbs.db
 
-#local .env files
+# local .env files
 .env
 .env*local
 
@@ -75,3 +75,6 @@ terraform.tfstate.backup
 /libs/locales/**/*_old.json
 
 .nx/cache
+
+# react-email
+.react-email
