--- a/package.json
+++ b/package.json
@@ -63,8 +63,10 @@
     "@next/bundle-analyzer": "^13.5.6",
     "@prisma/client": "^5.2.0",
     "@storybook/core-server": "7.6.6",
+    "@types/aws-sdk": "^2.7.0",
     "@types/gapi": "^0.0.47",
     "adal-node": "^0.2.3",
+    "aws-sdk": "^2.1546.0",
     "axios": "^1.6.5",
     "blurhash": "^2.0.5",
     "bull": "^4.12.2",
