--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "graphql": "^16.8.0",
     "i18next": "23.6.0",
     "ioredis": "^5.3.2",
+    "isomorphic-fetch": "^3.0.0",
     "jsondiffpatch": "^0.5.0",
     "jsonwebtoken": "^9.0.2",
     "launchdarkly-node-server-sdk": "^7.0.3",
