--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@aws-sdk/client-ses": "^3.513.0",
     "@casl/ability": "^6.5.0",
     "@casl/prisma": "^1.4.1",
+    "@crowdin/crowdin-api-client": "^1.29.5",
     "@docusaurus/core": "^3.0.1",
     "@docusaurus/preset-classic": "^3.0.1",
     "@emotion/cache": "11.11.0",
@@ -90,6 +91,7 @@
     "graphql": "^16.8.0",
     "i18next": "23.6.0",
     "ioredis": "^5.3.2",
+    "isomorphic-fetch": "^3.0.0",
     "jsondiffpatch": "^0.5.0",
     "jsonwebtoken": "^9.0.2",
     "launchdarkly-node-server-sdk": "^7.0.3",
