--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@formium/react": "^0.2.0",
     "@mdx-js/react": "^2.3.0",
     "@mui/icons-material": "^5.14.8",
-    "@mui/lab": "5.0.0-alpha.164",
+    "@mui/lab": "^5.0.0-alpha.143",
     "@mui/material": "^5.14.8",
     "@mui/system": "^5.14.8",
     "@mui/x-data-grid": "^6.12.1",
