--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@emotion/styled": "11.11.0",
     "@formium/client": "^0.1.4",
     "@formium/react": "^0.2.0",
+    "@mailchimp/mailchimp_marketing": "^3.0.80",
     "@mdx-js/react": "^2.3.0",
     "@mui/icons-material": "^5.14.8",
     "@mui/lab": "5.0.0-alpha.150",
@@ -67,6 +68,7 @@
     "@react-email/components": "^0.0.14",
     "@react-email/render": "^0.0.12",
     "@storybook/core-server": "7.6.6",
+    "@types/mailchimp__mailchimp_marketing": "^3.0.19",
     "adal-node": "^0.2.3",
     "aws-sdk": "^2.1557.0",
     "blurhash": "^2.0.5",
