--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
     "@commitlint/lint": "^17.7.0",
     "@docusaurus/module-type-aliases": "^3.0.1",
     "@emotion/babel-plugin": "11.11.0",
+    "@mermaid-js/mermaid-cli": "^10.8.0",
     "@nestjs/schematics": "10.0.2",
     "@nestjs/testing": "10.1.3",
     "@nrwl/js": "18.0.4",
@@ -253,6 +254,7 @@
     "playwright-lighthouse": "^2.2.2",
     "prettier": "2.8.8",
     "prisma": "^5.2.0",
+    "prisma-erd-generator": "^1.11.2",
     "react-refresh": "^0.14.0",
     "source-map-loader": "^3.0.0",
     "storybook-addon-apollo-client": "^5.0.0",
