feat: generate erd for prisma (#2459)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,8 @@ jobs:
           targets: prisma-generate
           all: true
           parallel: 1
+        env:
+          DISABLE_ERD: true
       - name: NPM apollo and graphql for codegen
         run: npm i -g apollo graphql @apollo/rover@0.22.0
       - name: Codegen
@@ -118,6 +120,8 @@ jobs:
           targets: prisma-generate
           all: true
           parallel: 1
+        env:
+          DISABLE_ERD: true
       - name: Install Doppler
         run: |
           sudo apt-get update && sudo apt-get install -y apt-transport-https ca-certificates curl gnupg
@@ -188,6 +192,8 @@ jobs:
           targets: prisma-generate
           all: true
           parallel: 1
+        env:
+          DISABLE_ERD: true
       - name: Get number of CPU cores
         id: cpu-cores
         uses: SimenB/github-actions-cpu-cores@v2
