--- a/apps/api-journeys/Dockerfile
+++ b/apps/api-journeys/Dockerfile
@@ -2,6 +2,7 @@ FROM node:18-alpine3.18
 
 EXPOSE 4001
 
+ENV DISABLE_ERD=true
 ENV PRISMA_LOCATION_JOURNEYS=/app/node_modules/.prisma/api-journeys-client
 
 RUN apk upgrade --update-cache --available && \
