--- a/apps/api-languages/db/Dockerfile
+++ b/apps/api-languages/db/Dockerfile
@@ -1,5 +1,6 @@
 FROM node:18-alpine3.18
 
+ENV DISABLE_ERD=true
 ENV PRISMA_LOCATION_LANGUAGES=/app/node_modules/.prisma/api-languages-client
 
 RUN apk upgrade --update-cache --available && \
