--- a/apps/api-gateway/router.prod.yaml
+++ b/apps/api-gateway/router.prod.yaml
@@ -2,6 +2,7 @@ supergraph:
   listen: 0.0.0.0:4000
   introspection: true
 cors:
+  allow_any_origin: true
   origins:
     # apollo studio
     - https://studio.apollographql.com
