--- a/.github/workflows/app-deploy.yml
+++ b/.github/workflows/app-deploy.yml
@@ -75,7 +75,7 @@ jobs:
         run: |
           echo "github.ref: ${{ github.ref }}"
           echo "github.event_name: ${{ github.event_name }}"
-          echo "app: ${{ fromJson(needs.affected.outputs.matrix }}"
+          echo "app: ${{ fromJson(needs.affected.outputs.matrix) }}"
       - name: start deployment
         uses: chrnorm/deployment-action@v2
         id: deployment
