--- a/.github/workflows/app-deploy.yml
+++ b/.github/workflows/app-deploy.yml
@@ -53,12 +53,12 @@ jobs:
       fail-fast: false
       matrix:
         app: ${{fromJson(needs.affected.outputs.matrix)}}
-        github-ref: ${{ github.ref }}
+        github-ref-name: ${{ github.ref_name }}
         github-event-name: ${{ github.event_name }}
         node-version: [18]
         exclude:
           - app: journeys
-            github-ref: refs/heads/stage
+            github-ref-name: stage
             github-event-name: push
     runs-on: ubuntu-latest
     outputs:
@@ -199,14 +199,14 @@ jobs:
       fail-fast: false
       matrix:
         app: ${{fromJson(needs.affected.outputs.matrix)}}
-        github-ref: ${{ github.ref }}
+        github-ref-name: ${{ github.ref_name }}
         node-version: [18]
         exclude:
           - app: journeys-admin
-            github-ref: refs/heads/main
+            github-ref-name: main
         include:
           - app: journeys
-            github-ref: refs/heads/stage
+            github-ref-name: stage
     runs-on: ubuntu-latest
     permissions:
       deployments: write
