--- a/.github/workflows/app-deploy.yml
+++ b/.github/workflows/app-deploy.yml
@@ -57,7 +57,12 @@ jobs:
         github-event-name: ['${{ github.event_name }}']
         node-version: [18]
         exclude:
+          # handled by production job below
           - app: journeys
+            github-ref-name: stage
+            github-event-name: push
+          # handled by ecs-frontend-deploy-stage
+          - app: journeys-admin
             github-ref-name: stage
             github-event-name: push
     runs-on: ubuntu-latest
@@ -200,7 +205,9 @@ jobs:
         github-ref-name: ['${{ github.ref_name }}']
         node-version: [18]
         exclude:
+          # handled by ecs-frontend-deploy-prod
           - app: journeys-admin
+          # handled by deploy-preview job above
           - github-ref-name: stage
         include:
           - app: journeys
