--- a/.github/workflows/app-deploy.yml
+++ b/.github/workflows/app-deploy.yml
@@ -44,25 +44,27 @@ jobs:
     name: Deploy Preview and Test
     needs: affected
     # if branch is not main or is a pull request
-    # and not:
-    # - stage branch
-    # - push
-    # - journeys app
     if: |
       needs.affected.outputs.matrix != '[]' &&
       needs.affected.outputs.matrix != '' && (
-        github.ref != 'refs/heads/main' || 
-        github.event_name == 'pull_request'
-      ) && !(
-        github.ref == 'refs/heads/stage' &&
-        github.event_name == 'push' &&
-        fromJson(needs.affected.outputs.matrix) == 'journeys'
+        github.ref != 'refs/heads/main' || github.event_name == 'pull_request'
       )
     strategy:
       fail-fast: false
       matrix:
         app: ${{fromJson(needs.affected.outputs.matrix)}}
+        github-ref-name: ['${{ github.ref_name }}']
+        github-event-name: ['${{ github.event_name }}']
         node-version: [18]
+        exclude:
+          # handled by production job below
+          - app: journeys
+            github-ref-name: stage
+            github-event-name: push
+          # handled by ecs-frontend-deploy-stage
+          - app: journeys-admin
+            github-ref-name: stage
+            github-event-name: push
     runs-on: ubuntu-latest
     outputs:
       url: ${{ steps.deployment-url.outputs.deployment-url }}
@@ -191,26 +193,25 @@ jobs:
   deploy-production:
     name: Deploy Production
     # if not a pull request
-    # and main branch where app is not journeys-admin
-    # or stage branch where app is journeys
     if: |
       needs.affected.outputs.matrix != '[]' &&
       needs.affected.outputs.matrix != '' &&
-      github.event_name != 'pull_request' && (
-        (
-          github.ref == 'refs/heads/main' &&
-          fromJson(needs.affected.outputs.matrix) != 'journeys-admin'
-        ) || (
-          github.ref == 'refs/heads/stage' &&
-          fromJson(needs.affected.outputs.matrix) == 'journeys'
-        )
-      )
+      github.event_name != 'pull_request'
     needs: affected
     strategy:
       fail-fast: false
       matrix:
         app: ${{fromJson(needs.affected.outputs.matrix)}}
+        github-ref-name: ['${{ github.ref_name }}']
         node-version: [18]
+        exclude:
+          # handled by ecs-frontend-deploy-prod
+          - app: journeys-admin
+          # handled by deploy-preview job above
+          - github-ref-name: stage
+        include:
+          - app: journeys
+            github-ref-name: stage
     runs-on: ubuntu-latest
     permissions:
       deployments: write
