feat: fix prisma alpine openssl

--- a/apps/api-journeys/Dockerfile
+++ b/apps/api-journeys/Dockerfile
@@ -1,11 +1,10 @@
-FROM node:18-alpine3.18
+FROM node:18-alpine
 
 EXPOSE 4001
 
 ENV PRISMA_LOCATION_JOURNEYS=/app/node_modules/.prisma/api-journeys-client
 
 RUN apk upgrade --update-cache --available && \
-    apk add openssl1.1-compat && \
     rm -rf /var/cache/apk/*
 
 WORKDIR /app
