--- a/apps/api-languages/db/Dockerfile
+++ b/apps/api-languages/db/Dockerfile
@@ -1,9 +1,8 @@
-FROM node:18-alpine3.18
+FROM node:18-alpine
 
 ENV PRISMA_LOCATION_LANGUAGES=/app/node_modules/.prisma/api-languages-client
 
 RUN apk upgrade --update-cache --available && \
-    apk add openssl1.1-compat && \
     rm -rf /var/cache/apk/*
 
 WORKDIR /app
