--- a/apps/api-tags/Dockerfile
+++ b/apps/api-tags/Dockerfile
@@ -1,11 +1,10 @@
-FROM node:18-alpine3.18
+FROM node:18-alpine
 
 EXPOSE 4006
 
 ENV PRISMA_LOCATION_TAGS=/app/node_modules/.prisma/api-tags-client
 
 RUN apk upgrade --update-cache --available && \
-    apk add openssl1.1-compat && \
     rm -rf /var/cache/apk/*
 
 WORKDIR /app
