--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@prisma/client": "^5.2.0",
     "@react-email/components": "^0.0.14",
     "@react-email/render": "^0.0.12",
+    "@react-oauth/google": "^0.12.1",
     "@storybook/core-server": "7.6.6",
     "@types/aws-sdk": "^2.7.0",
     "@types/gapi": "^0.0.47",
@@ -123,6 +124,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-email": "^2.0.0",
+    "react-google-drive-picker": "^1.2.2",
     "react-gtm-module": "^2.0.11",
     "react-helmet": "^6.1.0",
     "react-i18next": "13.3.1",
