--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,6 +114,7 @@ jobs:
           restore-keys: node-modules-${{ matrix.node-version }}-
       - name: NPM Install
         run: npm install --silent
+      - uses: browser-actions/setup-chrome@v1
       - name: generate prisma imports
         uses: mansagroup/nrwl-nx-action@v3
         with:
@@ -121,7 +122,7 @@ jobs:
           all: true
           parallel: 1
         env:
-          DISABLE_ERD: true
+          DISABLE_ERD: false
       - name: Install Doppler
         run: |
           sudo apt-get update && sudo apt-get install -y apt-transport-https ca-certificates curl gnupg
