--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -125,7 +125,7 @@ jobs:
           DISABLE_ERD: false
       - name: Check for modified files
         id: git-check
-        run: echo modified=$(if [ -n "$(git status --porcelain)" ]; then echo "true"; else echo "false"; fi)"
+        run: echo modified=$(if [ -n "$(git status --porcelain)" ]; then echo "true"; else echo "false"; fi) >> GITHUB_OUTPUT
       - name: Update ERD changes in GitHub repository
         if: steps.git-check.outputs.modified == 'true'
         run: |
