--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "cache-manager": "^5.2.3",
     "canvas": "^2.11.2",
     "clsx": "^2.0.0",
-    "core-js": "^3.32.2",
+    "core-js": "3.36.1",
     "cors": "^2.8.5",
     "cross-fetch": "^4.0.0",
     "dataloader": "^2.2.2",
@@ -159,20 +159,20 @@
     "@mermaid-js/mermaid-cli": "^10.8.0",
     "@nestjs/schematics": "10.0.2",
     "@nestjs/testing": "10.1.3",
-    "@nrwl/js": "18.0.4",
-    "@nx/devkit": "18.0.4",
-    "@nx/eslint": "18.0.4",
-    "@nx/eslint-plugin": "18.0.4",
-    "@nx/express": "18.0.4",
-    "@nx/jest": "18.0.4",
-    "@nx/nest": "18.0.4",
-    "@nx/next": "18.0.4",
-    "@nx/node": "18.0.4",
-    "@nx/react": "18.0.4",
-    "@nx/storybook": "18.0.4",
-    "@nx/web": "18.0.4",
-    "@nx/webpack": "18.0.4",
-    "@nx/workspace": "18.0.4",
+    "@nrwl/js": "18.2.3",
+    "@nx/devkit": "18.2.3",
+    "@nx/eslint": "18.2.3",
+    "@nx/eslint-plugin": "18.2.3",
+    "@nx/express": "18.2.3",
+    "@nx/jest": "18.2.3",
+    "@nx/nest": "18.2.3",
+    "@nx/next": "18.2.3",
+    "@nx/node": "18.2.3",
+    "@nx/react": "18.2.3",
+    "@nx/storybook": "18.2.3",
+    "@nx/web": "18.2.3",
+    "@nx/webpack": "18.2.3",
+    "@nx/workspace": "18.2.3",
     "@playwright/test": "^1.37.1",
     "@storybook/addon-a11y": "7.6.6",
     "@storybook/addon-essentials": "7.6.6",
@@ -204,8 +204,8 @@
     "@types/stylis": "^4.2.0",
     "@types/ua-parser-js": "^0.7.37",
     "@types/uuid": "^9.0.3",
-    "@typescript-eslint/eslint-plugin": "6.21.0",
-    "@typescript-eslint/parser": "6.21.0",
+    "@typescript-eslint/eslint-plugin": "7.5.0",
+    "@typescript-eslint/parser": "7.5.0",
     "@vidavidorra/commitlint-config": "^5.0.2",
     "babel-jest": "^29.6.4",
     "babel-loader": "^9.1.3",
@@ -219,16 +219,19 @@
     "css-mediaquery": "^0.1.2",
     "danger": "^11.2.8",
     "dotenv": "^16.3.1",
-    "eslint": "8.48.0",
+    "eslint": "8.57.0",
+    "eslint-config-love": "^46.0.0",
     "eslint-config-next": "13.5.6",
     "eslint-config-prettier": "9.0.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-i18next": "^6.0.3",
     "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jest": "^28.2.0",
     "eslint-plugin-jest-formatting": "^3.1.0",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-playwright": "^1.5.4",
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
@@ -245,7 +248,7 @@
     "msw-storybook-addon": "^1.8.0",
     "next-compose-plugins": "^2.2.1",
     "next-router-mock": "^0.9.10",
-    "nx": "18.0.4",
+    "nx": "18.2.3",
     "pino-pretty": "^10.2.0",
     "playwright-core": "^1.39.0",
     "playwright-lighthouse": "^2.2.2",
