--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@react-email/render": "^0.0.12",
     "@storybook/core-server": "7.6.6",
     "@types/mailchimp__mailchimp_marketing": "^3.0.19",
+    "accept-language": "^3.0.18",
     "adal-node": "^0.2.3",
     "aws-sdk": "^2.1557.0",
     "blurhash": "^2.0.5",
@@ -92,7 +93,8 @@
     "formik": "^2.4.4",
     "fscreen": "^1.2.0",
     "graphql": "^16.8.0",
-    "i18next": "23.6.0",
+    "i18next": "^23.6.0",
+    "i18next-resources-to-backend": "^1.2.1",
     "ioredis": "^5.3.2",
     "isomorphic-fetch": "^3.0.0",
     "jsondiffpatch": "^0.5.0",
@@ -123,7 +125,7 @@
     "react-email": "^2.0.0",
     "react-gtm-module": "^2.0.11",
     "react-helmet": "^6.1.0",
-    "react-i18next": "13.3.1",
+    "react-i18next": "^13.3.1",
     "react-is": "18.2.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.15.0",
