--- a/apps/watch/tsconfig.json
+++ b/apps/watch/tsconfig.json
@@ -23,10 +23,9 @@
     "**/*.tsx",
     "**/*.js",
     "**/*.jsx",
-    "../../apps/watch-new/.next/types/**/*.ts",
-    "../../dist/apps/watch-new/.next/types/**/*.ts",
     "next-env.d.ts",
-    ".next/types/**/*.ts"
+    "pages/_document.tsx.bak",
+    "pages/_app.tsx.bak"
   ],
-  "exclude": ["node_modules", "jest.config.ts", "**/*.spec.ts", "**/*.test.ts"]
+  "exclude": ["node_modules", "jest.config.ts"]
 }
