--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "fscreen": "^1.2.0",
     "graphql": "^16.8.0",
     "i18next": "^23.6.0",
+    "i18next-browser-languagedetector": "^7.2.1",
     "i18next-resources-to-backend": "^1.2.1",
     "ioredis": "^5.3.2",
     "isomorphic-fetch": "^3.0.0",
@@ -119,6 +120,7 @@
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-colorful": "^5.5.1",
+    "react-cookie": "^7.1.4",
     "react-div-100vh": "^0.7.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
