fix: add localhost direct orgin urls

--- a/apps/api-gateway/router.prod.yaml
+++ b/apps/api-gateway/router.prod.yaml
@@ -10,12 +10,18 @@ cors:
     - https://admin-stage.nextstep.is
     - https://journeys-admin.central.jesusfilm.org
     - https://journeys-admin.stage.central.jesusfilm.org
+    - http://localhost:4200
     # journeys
     - https://your.nextstep.is
     - https://your-stage.nextstep.is
+    - http://localhost:4100
+    # watch
+    - https://localhost:4300
+    # nexus-admin
+    - https://nexus.jesusfilm.org
+    - https://nexus-stage.jesusfilm.org
+    - https://localhost:4500
   match_origins:
-    # any localhost (can now run dev apps against the stg and prd api)
-    - '^http://localhost:\d+/'
     # any project deployed on the jesusfilm vercel account
     - '^https://([a-z0-9-]+)-jesusfilm[.]vercel[.]app$'
     # any project deployed on the jesusfilm.org domain (used primarily for watch)
