--- a/apps/docs/project.json
+++ b/apps/docs/project.json
@@ -57,7 +57,7 @@
       "options": {
         "commands": [
           {
-            "command": "DOPPLER_TOKEN=$DOPPLER_GITHUB_SERVICE_TOKEN doppler secrets download --no-file --format=env --project docs > apps/docs/.env"
+            "command": "DOPPLER_TOKEN=$DOPPLER_DOCS_TOKEN doppler secrets download --no-file --format=env --project docs > apps/docs/.env"
           }
         ]
       }
