--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@formium/react": "^0.2.0",
     "@mailchimp/mailchimp_marketing": "^3.0.80",
     "@mdx-js/react": "^2.3.0",
+    "@mui/base": "^5.0.0-beta.40",
     "@mui/icons-material": "^5.14.8",
     "@mui/lab": "5.0.0-alpha.150",
     "@mui/material": "^5.14.8",
