--- a/libs/journeys/ui/project.json
+++ b/libs/journeys/ui/project.json
@@ -46,7 +46,7 @@
             "command": "rm -rf libs/journeys/ui/__generated__"
           },
           {
-            "command": "npx apollo client:codegen --config libs/journeys/ui/apollo.config.js --target typescript  --globalTypesFile=libs/journeys/ui/__generated__/globalTypes.ts"
+            "command": "npx apollo client:codegen --config libs/journeys/ui/apollo.config.js --target typescript  --globalTypesFile=libs/journeys/ui/__generated__/globalTypes.ts --passthroughCustomScalars"
           }
         ]
       }
