--- a/apps/arclight/project.json
+++ b/apps/arclight/project.json
@@ -23,7 +23,8 @@
       "defaultConfiguration": "development",
       "options": {
         "buildTarget": "arclight:build",
-        "dev": true
+        "dev": true,
+        "port": 4150
       },
       "configurations": {
         "development": {
