fix: ran codegen again

--- a/apps/journeys-admin/project.json
+++ b/apps/journeys-admin/project.json
@@ -147,7 +147,7 @@
             "command": "rm -rf apps/journeys-admin/__generated__"
           },
           {
-            "command": "npx apollo client:codegen --config apps/journeys-admin/apollo.config.js --target typescript --outputFlat apps/journeys-admin/__generated__ --passthroughCustomScalars"
+            "command": "npx apollo client:codegen --config apps/journeys-admin/apollo.config.js --target typescript --outputFlat apps/journeys-admin/__generated__"
           }
         ]
       }
