feat: establish extract iterator pattern from bq (#2665)
Co-authored-by: Tataihono Nikora <tataihono.nikora@gmail.com>

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@emotion/styled": "11.11.0",
     "@formium/client": "^0.1.4",
     "@formium/react": "^0.2.0",
+    "@google-cloud/bigquery": "^7.6.0",
     "@mailchimp/mailchimp_marketing": "^3.0.80",
     "@mdx-js/react": "^2.3.0",
     "@mui/icons-material": "^5.14.8",
