--- a/apps/watch/.eslintrc.json
+++ b/apps/watch/.eslintrc.json
@@ -10,7 +10,20 @@
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "rules": {
-        "@next/next/no-html-link-for-pages": ["error", "apps/watch-new/pages"]
+        "@next/next/no-html-link-for-pages": ["error", "apps/watch/src/app"]
+      }
+    },
+    {
+      "files": ["*.ts", "*.tsx"],
+
+      "rules": {
+        "no-void": [
+          "error",
+          {
+            "allowAsStatement": true
+          }
+        ],
+        "@typescript-eslint/no-misused-promises": "off"
       }
     },
     {
@@ -25,6 +38,12 @@
       "files": ["*.spec.ts", "*.spec.tsx", "*.spec.js", "*.spec.jsx"],
       "env": {
         "jest": true
+      }
+    },
+    {
+      "files": ["next-env.d.ts"],
+      "rules": {
+        "@typescript-eslint/triple-slash-reference": "off"
       }
     }
   ]
