test: add implicit depedency to deploy code

--- a/apps/nexus-admin/project.json
+++ b/apps/nexus-admin/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/nexus-admin",
   "projectType": "application",
+  "implicitDependencies": ["nexus-admin-e2e"],
   "targets": {
     "build": {
       "executor": "nx:run-commands",
