--- a/apps/arclight/project.json
+++ b/apps/arclight/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/arclight",
   "projectType": "application",
+  "implicitDependencies": ["arclight-e2e"],
   "targets": {
     "build": {
       "executor": "nx:run-commands",
