--- a/apps/docs/project.json
+++ b/apps/docs/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/docs/src",
+  "implicitDependencies": ["docs-e2e"],
   "targets": {
     "build": {
       "executor": "nx:run-commands",
