feat: refactor nav bar

--- a/apps/nexus-admin/.eslintrc.json
+++ b/apps/nexus-admin/.eslintrc.json
@@ -28,7 +28,8 @@
             "allowAsStatement": true
           }
         ],
-        "@typescript-eslint/no-misused-promises": "off"
+        "@typescript-eslint/no-misused-promises": "off",
+        "i18next/no-literal-string": "off"
       }
     },
     {
