feat: next-intl

--- a/apps/watch/tsconfig.json
+++ b/apps/watch/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "jsx": "preserve",
+    "module": "ESNext",
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "types": ["node", "jest"],
