--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -59,7 +59,8 @@
           "lodash",
           "@mui/material",
           "@mui/system",
-          "@mui/icons-material"
+          "@mui/icons-material",
+          "react-i18next"
         ],
         "patterns": ["@mui/*/*/*", "!@mui/material/test-utils/*", "*.mock"]
       }
