fix: create watch-ui libs

--- a/apps/watch/tsconfig.json
+++ b/apps/watch/tsconfig.json
@@ -13,6 +13,14 @@
     "isolatedModules": true,
     "incremental": true
   },
-  "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "next-env.d.ts"],
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.js",
+    "**/*.jsx",
+    "next-env.d.ts",
+    "../../libs/watch/ui/src/libs/videoChildFields/videoChildFields.ts",
+    "src/components/Videos/__generated__/testData.ts"
+  ],
   "exclude": ["node_modules", "jest.config.ts"]
 }
