feat: languages graphql-yoga

--- a/apps/api-languages/tsconfig.app.json
+++ b/apps/api-languages/tsconfig.app.json
@@ -3,11 +3,7 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
-    "types": [
-      "node",
-      "@nx/react/typings/cssmodule.d.ts",
-      "@nx/react/typings/image.d.ts"
-    ],
+    "types": ["node"],
     "emitDecoratorMetadata": true,
     "target": "es2021"
   },
