--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "@algolia/client-search": "^4.14.3",
     "@apollo/client": "^3.8.3",
     "@apollo/experimental-nextjs-app-support": "^0.10.0",
-    "@apollo/server": "^4.9.3",
+    "@apollo/server": "^4.10.4",
     "@apollo/server-plugin-response-cache": "^4.1.3",
-    "@apollo/subgraph": "^2.5.4",
+    "@apollo/subgraph": "^2.7.8",
     "@aws-sdk/client-ses": "^3.513.0",
     "@casl/ability": "^6.5.0",
     "@casl/prisma": "^1.4.1",
@@ -66,6 +66,10 @@
     "@nestjs/graphql": "^12.0.8",
     "@nestjs/platform-express": "10.1.3",
     "@next/bundle-analyzer": "^13.5.6",
+    "@pothos/core": "^3.41.1",
+    "@pothos/plugin-directives": "^3.10.2",
+    "@pothos/plugin-federation": "^3.15.0",
+    "@pothos/plugin-prisma": "^3.65.1",
     "@prisma/client": "^5.2.0",
     "@react-email/components": "^0.0.17",
     "@react-email/render": "^0.0.13",
@@ -95,7 +99,8 @@
     "formik": "^2.4.4",
     "fscreen": "^1.2.0",
     "gql.tada": "^1.5.3",
-    "graphql": "^16.8.0",
+    "graphql": "^16.8.1",
+    "graphql-yoga": "^5.3.1",
     "i18next": "23.6.0",
     "instantsearch.js": "^4.63.0",
     "ioredis": "^5.3.2",
