--- a/apps/journeys-admin-e2e/project.json
+++ b/apps/journeys-admin-e2e/project.json
@@ -3,7 +3,6 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/journeys-admin-e2e/src",
   "projectType": "application",
-  "implicitDependencies": ["journeys-admin"],
   "targets": {
     "e2e": {
       "executor": "nx:run-commands",
@@ -42,5 +41,6 @@
       }
     }
   },
-  "tags": []
+  "tags": [],
+  "implicitDependencies": ["journeys-admin"]
 }
