--- a/apps/api-languages/project.json
+++ b/apps/api-languages/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/api-languages/src",
   "projectType": "application",
+  "tags": [],
   "targets": {
     "build": {
       "executor": "@nx/webpack:webpack",
@@ -50,10 +51,6 @@
       "options": {
         "command": "npm run ts-node tools/scripts/generate-typings.ts api-languages --transpileOnly"
       }
-    },
-    "lint": {
-      "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"]
     },
     "test": {
       "executor": "@nx/jest:jest",
@@ -140,6 +137,5 @@
         "command": "codecov -f coverage/apps/api-languages/cobertura-coverage.xml -F apps.api-languages"
       }
     }
-  },
-  "tags": []
+  }
 }
