--- a/apps/nexus-admin/project.json
+++ b/apps/nexus-admin/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/nexus-admin",
   "projectType": "application",
+  "tags": [],
   "targets": {
     "build": {
       "executor": "nx:run-commands",
@@ -97,10 +98,6 @@
         "jestConfig": "apps/nexus-admin/jest.config.ts"
       }
     },
-    "lint": {
-      "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"]
-    },
     "type-check": {
       "executor": "nx:run-commands",
       "options": {
@@ -159,6 +156,5 @@
         "parallel": false
       }
     }
-  },
-  "tags": []
+  }
 }
