--- a/libs/shared/ui-dynamic/project.json
+++ b/libs/shared/ui-dynamic/project.json
@@ -3,11 +3,8 @@
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/shared/ui-dynamic/src",
   "projectType": "library",
+  "tags": [],
   "targets": {
-    "lint": {
-      "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"]
-    },
     "type-check": {
       "executor": "nx:run-commands",
       "options": {
@@ -39,6 +36,5 @@
         "command": "codecov -f coverage/libs/shared/ui-dynamic/cobertura-coverage.xml -F libs.shared.ui"
       }
     }
-  },
-  "tags": []
+  }
 }
