--- a/apps/api-tags/project.json
+++ b/apps/api-tags/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/api-tags/src",
   "projectType": "application",
+  "tags": [],
   "targets": {
     "build": {
       "executor": "@nx/webpack:webpack",
@@ -55,10 +56,6 @@
       "options": {
         "command": "npm run ts-node tools/scripts/generate-typings.ts api-tags --transpileOnly"
       }
-    },
-    "lint": {
-      "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"]
     },
     "test": {
       "executor": "@nx/jest:jest",
@@ -146,6 +143,5 @@
         "command": "codecov -f coverage/apps/api-tags/cobertura-coverage.xml -F apps.api-tags"
       }
     }
-  },
-  "tags": []
+  }
 }
