--- a/apps/journeys-admin/project.json
+++ b/apps/journeys-admin/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/journeys-admin",
   "projectType": "application",
+  "tags": ["doppler_config:stg_dev"],
   "implicitDependencies": ["locales"],
   "targets": {
     "build": {
@@ -114,10 +115,6 @@
         "jestConfig": "apps/journeys-admin/jest.config.ts"
       }
     },
-    "lint": {
-      "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"]
-    },
     "type-check": {
       "executor": "nx:run-commands",
       "options": {
@@ -188,6 +185,5 @@
         "parallel": false
       }
     }
-  },
-  "tags": ["doppler_config:stg_dev"]
+  }
 }
