--- a/apps/watch/project.json
+++ b/apps/watch/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/watch",
   "projectType": "application",
+  "tags": ["doppler_config:stg_dev"],
   "implicitDependencies": ["locales"],
   "targets": {
     "build": {
@@ -115,10 +116,6 @@
         "jestConfig": "apps/watch/jest.config.ts"
       }
     },
-    "lint": {
-      "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"]
-    },
     "type-check": {
       "executor": "nx:run-commands",
       "options": {
@@ -179,6 +176,5 @@
         "command": "codecov -f coverage/apps/watch/cobertura-coverage.xml -F apps.watch"
       }
     }
-  },
-  "tags": ["doppler_config:stg_dev"]
+  }
 }
