--- a/libs/nest/powerBi/project.json
+++ b/libs/nest/powerBi/project.json
@@ -3,11 +3,8 @@
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/nest/powerBi/src",
   "projectType": "library",
+  "tags": [],
   "targets": {
-    "lint": {
-      "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"]
-    },
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/libs/nest/powerBi"],
@@ -21,6 +18,5 @@
         "command": "codecov -f coverage/libs/nest/powerBi/cobertura-coverage.xml -F libs.nest.powerBi"
       }
     }
-  },
-  "tags": []
+  }
 }
